looking better, stuck on the sticky footer on contact page. Got it to the right size, but it's floating in the middle. Find a fix.;)

--- a/custom.css
+++ b/custom.css
@@ -1,8 +1,17 @@
-
+.footer {
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    /* Set the fixed height of the footer here */
+    height: 60px;
+    line-height: 60px; /* Vertically center the text there */
+    background-color: #f5f5f5;
+  }
 .back {
     font-family: 'Cabin', sans-serif;
     background-color: lemonchiffon;
 }
+
 .lbwMain{
     background: url(Assets/Images/landscape.jpg);
     background-position: center center;
@@ -23,6 +32,9 @@
         height: auto;
     }
 }
+#sticky-footer {
+    flex-shrink: none;
+  }
 
 audio { 
     max-height: 40px;
